Resolves: fdo#33898 Try and use EUDC as first-level glyph fallback font